Lighting(no where near finished) Added noise library (still needs work) Added Delaunay triangle library (still needs work)
Added Resize Camera

ViewPort renamed to Scene
Seperated FrameBufferObject From Viewport/Scene

Removed Z-index sorting

Began lighting

Changed ShaderProgram to use functions -> neater

Added support for local texture storage with integers instead of dictionary lookup in TextureManager

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -23,10 +23,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Graphics\Removed\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Update="Resources\Shaderscripts\Bilinear Warp\BilinearW.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -34,6 +30,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Bilinear Warp\BilinearW.vert">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Shaderscripts\Light\Light.frag">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Shaderscripts\Light\Light.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Simple.frag">
@@ -66,6 +68,10 @@
     <None Update="Resources\Textures\Test.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Resources\Shaderscripts\Basic Lighting\" />
   </ItemGroup>
 
 </Project>
