--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Graphics\Light.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ApplicationDefinition Include="Resources\Shaderscripts\CodeFile1.shader" />
   </ItemGroup>
 
