Lights working through expensivbe uniform loop
Frame Buffer changes made -> can now render Frame buffer. still doesnt store post processed texture.

Added Light Objects but they arent imnplemented or finshed at all

removed base constructor in Render Object cos wtf was that j dumb y would i do that

Moved vertex array object and buffer in window to frame buffer. so I now render the frame buffer -> Kinda dumb because these are currently the same for each frame buffer but what ever.

Made changes to frame buffer parameters to add attachments to tidy up function calls by adding default values.

Used uniform block to create basic lights.

Reorganized Shader program a bit. for shits and giggles just for explanations an that.

Added some more constructors for uniform block for like arrays??? yh idk it seemed useful at the time.

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -14,10 +14,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Graphics\Light.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ApplicationDefinition Include="Resources\Shaderscripts\CodeFile1.shader" />
   </ItemGroup>
 
@@ -34,6 +30,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Bilinear Warp\BilinearW.vert">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Shaderscripts\Light Shaders\Light.frag">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Shaderscripts\Light Shaders\Light.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Simple.frag">
