Kinda Midway through implementing some stencil shadows and optimised deferred lighting. so nothing works anymore. Thats fine. im completely fine with this. I'm not scared that it might never work again.
I undid whatever barstardization was done to the frame buffer. I'm sorry frame buffer. It won't happen again.

Created Mesh object to replace vertex array properties which cleans up some of the other classes. makes renderobject look kinda stupid tho.

created framebuffer subclasses in scene. idk.. thought it looked cute. might delete later.

Added more static constructors to shaderprogram.

Also worked out what the fuck a pipeline is in example. Havent seen that in any where else. its just how they decided to set it up. pricks. like good for them but can they not confuse the shit out of me? please?

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -32,10 +32,10 @@
     <None Update="Resources\Shaderscripts\Bilinear Warp\BilinearW.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Light Shaders\Light.frag">
+    <None Update="Resources\Shaderscripts\PostProcess\Ambient.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Light Shaders\Light.vert">
+    <None Update="Resources\Shaderscripts\PostProcess\Ambient.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Simple.frag">
