Mesh Importing works
still setting up deferred lighting.. thats getting repetative..

added light datablock with the idea eachh light has a buffer that binds in when rendering so they can share a program.

camera now resizes -> this would have fixed alot of the problems of before but for whatever reason i hadnt done it

I've been pissing about with model importing.

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -23,10 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Resources\Meshes\Cube.obj">
+    <None Update="Resources\Meshes\belly button.obj">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Meshes\Cube2.obj">
+    <None Update="Resources\Meshes\Cube.obj">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Meshes\Sphere.obj">
