Resorted Everything.. really wished I'd done this in two steps now..
Also lights work now. aaaay!stuff still needs to be sorted out. currently they're still only only visible from outside the sphere but thats fine. also no shadows yet. I'm still working on the stencil pass.

Theres also no ambient light anymore.. oh well

I cant really tell what else I've changed cos its all been resorted. great job michael. I'm sure this wont be really annoying.

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -24,13 +24,13 @@
 
   <ItemGroup>
     <None Update="Resources\Meshes\belly button.obj">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Meshes\Cube.obj">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Meshes\Sphere.obj">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Bilinear Warp\BilinearW.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
