--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -41,19 +41,16 @@
     <None Update="Resources\Shaderscripts\Bilinear Warp\BilinearW.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\PostProcess\Dir Light.frag">
+    <None Update="Resources\Shaderscripts\Rendering\Dir Light.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\PostProcess\Light.frag">
+    <None Update="Resources\Shaderscripts\Rendering\Shadow.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\PostProcess\Light.vert">
+    <None Update="Resources\Shaderscripts\Rendering\Light.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\PostProcess\Ambient.frag">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Resources\Shaderscripts\PostProcess\Ambient.vert">
+    <None Update="Resources\Shaderscripts\Rendering\Light.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Simple.frag">
@@ -62,10 +59,10 @@
     <None Update="Resources\Shaderscripts\Simple.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\PostProcess\GeomDebug.frag">
+    <None Update="Resources\Shaderscripts\Rendering\GeomDebug.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\PostProcess\GeomDebug.vert">
+    <None Update="Resources\Shaderscripts\Rendering\GeomDebug.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Default.vert">
