Restarted render loop following tutorial and generally tried to clear it up.
Im gonna need triangle_adjacency for occluder objects.

I still havent done the complicated bit but I have teh shaders for it. the next step is to set up the mesh primitive types

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -44,8 +44,17 @@
     <None Update="Resources\Shaderscripts\Rendering\Dir Light.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Rendering\Shadow.vert">
+    <None Update="Resources\Shaderscripts\Rendering\Shadow - Copy.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Shaderscripts\Rendering\Shadow.frag">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Shaderscripts\Rendering\Shadow.geom">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Shaderscripts\Rendering\Shadow.vert">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Rendering\Light.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
