fixed relative light transforms. Lights now work off scale instead of intensity That makes it much less messy code wise and probably easier to manage.
FIxed weirdass flickery shadows. PolygonOffset??? I dont understand wtf is going on anymore. idk why i need this. I think its because the back cap of the shadow volume is going outside the render camera so im just offseting it an eensy bit. idk. just accept it. fucking voodoo

Also made the geometry shaders look prettier

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -34,7 +34,7 @@
     <None Update="Resources\Shaderscripts\Bilinear Warp\BilinearW.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Rendering\Dir Light.frag">
+    <None Update="Resources\Shaderscripts\SolidColour.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Rendering\Light_Point.vert">
