INACTIVITY. I AM BUSY DOING NOTHING.
 I added an extract matrix. I cant remember what for.

 worked out alot of stuff to do for meshes. I dont know if I will do any of it but like... its nice?

texture manager had had alot of changes. it now supports 1D txtures. and i added a function to get the data directly from a sampler. can also now save textures.

Cleaned up the light object a bit. everything is so messy

IM really just putting off doing the frustrum culling co ugh that sounds painful.

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -9,9 +9,12 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.6.4" />
-    <PackageReference Include="OpenTK.GLControl" Version="3.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
@@ -34,31 +37,34 @@
     <None Update="Resources\Shaderscripts\Bilinear Warp\BilinearW.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Shaderscripts\Rendering\Light\Light_Debug.frag">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\Shaderscripts\SolidColour.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Rendering\Light_Point.vert">
+    <None Update="Resources\Shaderscripts\Rendering\Light\Light_Point.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Rendering\Light_Directional.frag">
+    <None Update="Resources\Shaderscripts\Rendering\Light\Light_Directional.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Rendering\Shadow.vert">
+    <None Update="Resources\Shaderscripts\Rendering\Shadow\Shadow.vert">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Rendering\Shadow_Directional.geom">
+    <None Update="Resources\Shaderscripts\Rendering\Shadow\Shadow_Directional.geom">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Rendering\Shadow.frag">
+    <None Update="Resources\Shaderscripts\Rendering\Shadow\Shadow.frag">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Rendering\Shadow_Point.geom">
+    <None Update="Resources\Shaderscripts\Rendering\Shadow\Shadow_Point.geom">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Rendering\Light_Point.frag">
+    <None Update="Resources\Shaderscripts\Rendering\Light\Light_Point.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Resources\Shaderscripts\Rendering\Light_Directional.vert">
+    <None Update="Resources\Shaderscripts\Rendering\Light\Light_Directional.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Shaderscripts\Default.vert">
