chug chug chug bluuuuuh
we been doin some frustum culling and sphere culling again.

i have problem because directional lights cant be culled so ive messed around a shit ton until i have a layout i like with the syntax of [Observer].Detects([ICullable])

I havent fixed it. ima just continue and hope theres a convenient way to add it into a Binary Volume tree.

--- a/GameEngine/.vscode/settings.json
+++ b/GameEngine/.vscode/settings.json
@@ -11,12 +11,12 @@
         "obj": true,
         "**/.vscode": true,
         ".vscode": true,
+        "**/Testing": true,
+        "Testing": true,
         "**/GameEngine.csproj": true,
         "*.csproj": true,
         "GameEngine.csproj": true,
-        "**/*.csproj": true,
-        "**/Testing": true,
-        "Testing": true
+        "**/*.csproj": true
     },
     "explorerExclude.backup": null
 }
