Haha continuity? making the evolution of code easy to understand and trace back? fuck that.

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -87,4 +87,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="GameEngine\Entities\Particles\" />
+  </ItemGroup>
+
 </Project>
