I dont need no copied code. (I really do) Tiss is working out well so far tho.
I've been doing all the cody stuff in one file because I just found it slightly easier. Its got a bit big now tho so ill change it immediately after this.

I ran it and it initial tests are like kinda sexy u know

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -93,6 +93,7 @@
 
   <ItemGroup>
     <Folder Include="GameEngine\Entities\Particles\" />
+    <Folder Include="GameEngine\ECS\" />
   </ItemGroup>
 
 </Project>
