params bad. Deprecated bye bye.
Archetype sorted buuuut..
Archetype be sorted by new 255bit indexer. Then lookup and

--- a/GameEngine/.vscode/launch.json
+++ b/GameEngine/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/GameEngine.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
-            "console": "internalConsole",
+            "console": "integratedTerminal",
             "stopAtEntry": false
         },
         {
