--- a/GameEngine/.vscode/settings.json
+++ b/GameEngine/.vscode/settings.json
@@ -18,5 +18,6 @@
         "GameEngine.csproj": true,
         "**/*.csproj": true
     },
-    "explorerExclude.backup": null
+    "explorerExclude.backup": null,
+    "debug.onTaskErrors": "showErrors"
 }
