created a .dll file for the ecs part of the project. this is now a different repository. so like look at that.

--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="ECS">
+      <HintPath>..\..\..\ECS\ECS\obj\Release\ECS.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
